<resources>
    <string name="app_name">pc</string>
    <string name="text">Введите код</string>
    <string name="cam">Запустить камеру</string>
    <string name="call">Позвонить</string>
    <string name="mail">Отправить по почте</string>
    <string name="share">Поделиться</string>
    <string name="gmail">aliabibulla7717@gmail.com</string>
    <string name="fullname">Ali Abibulla</string>
    <string name="newtext">Личная страница</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonC"><![CDATA[<]]></string>
    <string name="button0">0</string>
    <string name="buttonOk">OK</string>
</resources>